--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/wwwroot/css/site.css
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/wwwroot/css/site.css
@@ -5,6 +5,7 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  color: #0366d6;
 }
 
 /* Provide sufficient contrast against white background */
@@ -19,7 +20,7 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
+  color: #0366d6;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
@@ -32,6 +33,7 @@ html {
 @media (min-width: 768px) {
   html {
     font-size: 16px;
+    color: chocolate;
   }
 }
 
@@ -43,7 +45,7 @@ html {
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: 0 .25rem .75rem chocolate;
 }
 
 button.accept-policy {
@@ -61,6 +63,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  color: #0366d6;
 }
 .footer {
   position: absolute;
