--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/PaginaNoEncontrada.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/PaginaNoEncontrada.cshtml
@@ -2,3 +2,6 @@
 @model MascotaEpets.app.Presentacion.Pages.PaginaNoEncontradaModel
 @{
 }
+
+
+<h1 style="background-color: red;">!!Error  Pagina No Encontrada,verifique y reconecte</h1>
