--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Index.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Bienvenidos A Mascotas Epets</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+   <div class="tm-main-bg" style="height: 255.104px;"></div>
 </div>
