--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index" >Medicos </a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Medicos/ListadoMedicos" >Medicos </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Propietarios</a>
@@ -51,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - MascotaEpets.app.Presentacion - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 - MascotaEpets.app.Presentacion - <a asp-area="" asp-page="/Privacy">Privacidad</a>
         </div>
     </footer>
 
