--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/wwwroot/css/site.css
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/wwwroot/css/site.css
@@ -2,6 +2,7 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
+
   white-space: normal;
   text-align: center;
   word-break: break-all;
@@ -71,4 +72,14 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.tm-main-bg {
+  background-image: url(../img/Medicos2.jpg);
+  background-repeat: no-repeat;
+  background-position: 45% top;
+  height: 800px;
+  min-height: 500px;
+  margin-left: -40px;
+  margin-right: -40px;
 }
