--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav Id="navega" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" >
             <div class="container">
                 <a class="navbar-brand" href="index.html"><img src="img/MascotasFelizPets.png" width="84" class="my-4" title="title" alt="additional title" /></a>
                 <a class="navbar-brand" href="index.html"><img src="img/LogoDevelopes.png" width="84" class="my-4" title="title" alt="additional title" /></a>
