--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/ActualizarMedicos.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/ActualizarMedicos.cshtml
@@ -9,6 +9,7 @@
     <div class="form-group">
         <label asp-for="medico.Nombres"></label>
         <input id="Nombre" type="text" asp-for="medico.Nombres" class="form-control" placeholder="Ingrese Nombres"/>
+        <input id="IdMedico" type="hidden" asp-for="medico.IdMedico" class="form-control" placeholder="Ingrese Nombres"/>
     </div>
     <div class="form-group">
         <label asp-for="medico.Apellidos"></label>
@@ -19,11 +20,12 @@
         <input id="TarjetaPro" type="text" asp-for="medico.TarjetaProfesional" class="form-control" placeholder="Ingrese Tarjeta Profesional"/>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Actualizar Datos</button>
-        <button id="Cancelar" onclick="LimpiarForm()" type="submit" class="btn btn-primary">Cancelar</button>
+        <button type="submit" class="btn btn-primary" onclick="Actualizado()">Actualizar Datos</button>
+        
        
     </div>
 </form>
+<button id="Cancelar" onclick="LimpiarForm();" type="submit"  class="btn btn-danger">Cancelar</button>
 
 <script>
 
@@ -32,6 +34,11 @@
             $("#Nombre").val('');
             $("#Apellido").val('');
             $("#TarjetaPro").val('');
+        }
+
+        function Actualizado(){
+
+            confirm("Registro Actualizado,con exito");
         }
 
 </script>
