--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
@@ -20,11 +20,12 @@
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Ingresar Datos</button>
-        <button id="Cancelar" onclick="LimpiarForm()" type="submit" class="btn btn-primary">Cancelar</button>
+       
        
     </div>
 </form>
-
+<button id="Cancelar" onclick="LimpiarForm()" type="submit" class="btn btn-danger">Cancelar</button>
+       
 <script>
 
         function LimpiarForm(){
