--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Shared/_Layout.cshtml
@@ -9,10 +9,9 @@
 </head>
 <body>
     <header>
-        <nav Id="navega" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" >
+        <nav Id="navega" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3" >
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="img/MascotasFelizPets.png" width="84" class="my-4" title="title" alt="additional title" /></a>
-                <a class="navbar-brand" href="index.html"><img src="img/LogoDevelopes.png" width="84" class="my-4" title="title" alt="additional title" /></a>
+                <a class="navbar-brand" href="index.html"><img src="~/img/MascotasFelizPets.png" width="48" class="my-4" title="title" alt="additional title" /></a>
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Mascota Epets</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -21,22 +20,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Medicos/ListadoMedicos" >Medicos </a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Medicos/ListadoMedicos" >Medicos </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Propietarios</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Propietario/ListaPropietario">Propietarios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Mascota</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Mascotas/ListaMascota">Mascota</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Empresa</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Empresa/ListaEmpresa">Empresa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Registro</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/RegistroMed/ListaRegistro">Registro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Solicitud</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Solicitud/ListaSolicitud">Solicitud</a>
                         </li>
                     </ul>
                 </div>
