--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/ActualizarMedicos.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/ActualizarMedicos.cshtml
@@ -9,11 +9,19 @@
     <div class="form-group">
         <label asp-for="medico.Nombres"></label>
         <input id="Nombre" type="text" asp-for="medico.Nombres" class="form-control" placeholder="Ingrese Nombres"/>
-        <input id="IdMedico" type="hidden" asp-for="medico.IdMedico" class="form-control" placeholder="Ingrese Nombres"/>
+        <input id="Id" type="hidden" asp-for="medico.Id" class="form-control" placeholder="Ingrese Nombres"/>
     </div>
     <div class="form-group">
         <label asp-for="medico.Apellidos"></label>
         <input id="Apellido" type="text" asp-for="medico.Apellidos" class="form-control" placeholder="Ingrese Apellidos"/>
+    </div>
+     <div class="form-group">
+        <label asp-for="medico.Cedula"></label>
+        <input id="Cedula" type="text" asp-for="medico.Cedula" class="form-control" placeholder="Ingrese Cedula"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="medico.Telefono"></label>
+        <input id="Telefono" type="text" asp-for="medico.Telefono" class="form-control" placeholder="Ingrese Telefono"/>
     </div>
     <div class="form-group">
         <label asp-for="medico.TarjetaProfesional"></label>
@@ -34,6 +42,8 @@
             $("#Nombre").val('');
             $("#Apellido").val('');
             $("#TarjetaPro").val('');
+             $("#Cedula").val('');
+            $("#Telefono").val('');
         }
 
         function Actualizado(){
