--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/BuscarMedico.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/BuscarMedico.cshtml
@@ -5,9 +5,11 @@
 
 <h1>Buscar Medico por su Id</h1>
 
-<p>@Model.medico.IdMedico</p>
+<p>@Model.medico.Id</p>
 <p>@Model.medico.Nombres</p>
 <p>@Model.medico.Apellidos</p>
+<p>@Model.medico.Cedula</p>
+<p>@Model.medico.Telefono</p>
 <p>@Model.medico.TarjetaProfesional</p>
 
 <a asp-page="./ListadoMedicos" class="btn btn-primary">Regresar a Listado Medico</a>
