--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
@@ -15,8 +15,22 @@
         <input id="Apellido" type="text" asp-for="medico.Apellidos" class="form-control" placeholder="Ingrese Apellidos"/>
     </div>
     <div class="form-group">
+        <label asp-for="medico.Cedula"></label>
+        <input id="Cedula" type="text" asp-for="medico.Cedula" class="form-control" placeholder="Ingrese Cedula"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="medico.Telefono"></label>
+        <input id="Telefono" type="text" asp-for="medico.Telefono" class="form-control" placeholder="Ingrese Telefono"/>
+    </div>
+    <div class="form-group">
         <label asp-for="medico.TarjetaProfesional"></label>
         <input id="TarjetaPro" type="text" asp-for="medico.TarjetaProfesional" class="form-control" placeholder="Ingrese Tarjeta Profesional"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="medico.TipoAnimal"></label>
+        <select id="seleccion" asp-items='@new SelectList(Model.tipoanimal_,"IdAnimal","Animal")'>
+            <option value="">Seleccione el Tipo Animal</option>
+        </select>
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Ingresar Datos</button>
@@ -33,6 +47,8 @@
             $("#Nombre").val('');
             $("#Apellido").val('');
             $("#TarjetaPro").val('');
+            $("#Cedula").val('');
+            $("#Telefono").val('');
         }
 
 </script>
