--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Index.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bienvenidos A Mascotas Epets</h1>
+    <h1 class="mt-5">Bienvenidos A Mascotas Epets</h1>
    <div class="tm-main-bg" style="height: 255.104px;"></div>
 </div>
