--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/IngresarPropietarios.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/IngresarPropietarios.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 <h1>Ingresar Propietario</h1>
-<a asp-page="./ListaPropietarios" class="btn btn-primary">Regresar a listado Propietario</a>
+<a asp-page="./ListaPropietarios" class="btn btn-primary">Regresar</a>
 <form method="post">
 <div class="form-group">
         <label asp-for="Propietario.Nombres"></label>
