--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
@@ -4,7 +4,6 @@
 }
 
 <h1>Ingresar Medico</h1>
-<a asp-page="./ListadoMedicos" class="btn btn-primary">Regresar a listado Medicos</a>
 <form method="post">
 <div class="form-group">
         <label asp-for="medico.Nombres"></label>
@@ -33,13 +32,12 @@
         </select>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Ingresar Datos</button>
-       
-       
+        <button type="submit" class="btn btn-primary">Guardar</button>
     </div>
 </form>
 <button id="Cancelar" onclick="LimpiarForm()" type="submit" class="btn btn-danger">Cancelar</button>
-       
+
+<a asp-page="./ListadoMedicos" class="btn btn-primary">Regresar</a>       
 <script>
 
         function LimpiarForm(){
