implementacion del crud en el back mascota

--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
@@ -2,8 +2,7 @@
 @model MascotaEpets.app.Presentacion.Pages.IngresarMedicoModel
 @{
 }
-<div class="card bg-dark bg-gradient text-light" style="width: 18rem;>
-    
+<div class="card bg-dark bg-gradient text-light">
 <h1>Ingresar Medico</h1>
 </div>
 <form method="post">
