--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/ListaPropietarios.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/ListaPropietarios.cshtml
@@ -55,7 +55,7 @@
                                        <a class="btn btn-primary table-btn" asp-page="./BuscarPropietario" asp-route-IdPropietario="@item.Id">Buscar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarPropietarios" asp-route-IdPropietario="@item.Id">Editar</a>
+                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarPropietario" asp-route-IdPropietario="@item.Id">Editar</a>
                                     </td> 
                                     <td>
                                        <a class="btn btn-success table-btn" asp-page="./IngresarPropietarios" >Ingresar</a>
