--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/IngresarPropietarios.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/IngresarPropietarios.cshtml
@@ -2,8 +2,9 @@
 @model MascotaEpets.app.Presentacion.Pages.IngresarPropietariosModel
 @{
 }
+<div class="card bg-dark bg-gradient text-light">
 <h1>Ingresar Propietario</h1>
-<a asp-page="./ListaPropietarios" class="btn btn-primary">Regresar</a>
+</div>
 <form method="post">
 <div class="form-group">
         <label asp-for="Propietario.Nombres"></label>
@@ -23,24 +24,25 @@
     </div>
     <div class="form-group">
         <label asp-for="Propietario.Direccion"></label>
-        <input id="Direccion" type="text" asp-for="Propietario.Direccion" class="form-control" placeholder="Ingrese Tarjeta Profesional"/>
+        <input id="Direccion" type="text" asp-for="Propietario.Direccion" class="form-control" placeholder="Ingrese Direccion"/>
     </div>
     <div class="form-group">
         <label asp-for="Propietario.Email"></label>
-        <input id="Email" type="text" asp-for="Propietario.Email" class="form-control" placeholder="Ingrese Tarjeta Profesional"/>
+        <input id="Email" type="text" asp-for="Propietario.Email" class="form-control" placeholder="Ingrese Correo Electronico"/>
     </div>
     <div class="form-group">
         <label asp-for="Propietario.CantidadMascota"></label>
-        <input id="Email" type="text" asp-for="Propietario.CantidadMascota" class="form-control" placeholder="Ingrese Tarjeta Profesional"/>
+        <input id="Email" type="text" asp-for="Propietario.CantidadMascota" class="form-control" placeholder="Ingrese Cantidad de Mascotas"/>
     </div>
    
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Ingresar Datos</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
        
        
     </div>
 </form>
 <button id="Cancelar" onclick="LimpiarForm()" type="submit" class="btn btn-danger">Cancelar</button>
+<a asp-page="./ListaPropietarios" class="btn btn-primary">Regresar</a>
        
 <script>
 
