--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Shared/_Layout.cshtml
@@ -28,22 +28,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Medicos/ListadoMedicos" >Medicos </a>
+                            <a class="nav-link text-white text-center " asp-area="" asp-page="/Medicos/ListadoMedicos" >Medicos </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Propietario/ListaPropietarios">Propietarios</a>
+                            <a class="nav-link text-white text-center" asp-area="" asp-page="/Propietario/ListaPropietarios">Propietarios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Mascotas/ListaMascota">Mascota</a>
+                            <a class="nav-link text-white text-center" asp-area="" asp-page="/Mascotas/ListaMascotas">Mascota</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Empresa/ListaEmpresa">Empresa</a>
+                            <a class="nav-link text-white text-center" asp-area="" asp-page="/Empresa/ListaEmpresa">Empresa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/RegistroMed/ListaRegistro">Registro</a>
+                            <a class="nav-link text-white text-center" asp-area="" asp-page="/RegistroMed/ListaRegistro">Registro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Solicitud/ListaSolicitud">Solicitud</a>
+                            <a class="nav-link text-white text-center" asp-area="" asp-page="/Solicitud/ListaSolicitud">Solicitud</a>
                         </li>
                     </ul>
                 </div>
