paginas Empresa con su crud

--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/BuscarMascota.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/BuscarMascota.cshtml
@@ -53,7 +53,7 @@
                                         @Model.mascota.EstadoAnimo
                                     </td>
                                     <td>
-                                       <a asp-page="./ListaMascota" class="btn btn-primary">Regresar</a>
+                                       <a asp-page="./ListaMascotas" class="btn btn-primary">Regresar</a>
                                     </td> 
                                     
                                 </tr>
