--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/ActualizarMascota.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/ActualizarMascota.cshtml
@@ -2,3 +2,68 @@
 @model MascotaEpets.app.Presentacion.Pages.ActualizarMascotaModel
 @{
 }
+<div class="card-header bg-dark bg-gradient text-light">
+<h3>Actualizar Mascotas</h3>
+</div>
+<form method="post">    
+    <div class="form-group">
+        <label asp-for="mascota.Nombre"></label>
+        <input id="Nombre" type="text" asp-for="mascota.Nombre" class="form-control" placeholder="Ingrese Nombres"/>
+        <input id="Id" type="hidden" asp-for="mascota.IdMascota" class="form-control" placeholder="Ingrese Nombres"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="mascota.ColorOjos"></label>
+        <input id="Color_Ojos" type="text" asp-for="mascota.ColorOjos" class="form-control" placeholder="Ingrese Color de Ojos"/>
+    </div>
+     <div class="form-group">
+        <label asp-for="mascota.ColorPiel"></label>
+        <input id="Color_Piel" type="text" asp-for="mascota.ColorPiel" class="form-control" placeholder="Ingrese Color de Piel"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="mascota.Temperatura"></label>
+        <input id="Temperatura" type="text" asp-for="mascota.Temperatura" class="form-control" placeholder="Ingrese Temperatura"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="mascota.Peso"></label>
+        <input id="Peso" type="text" asp-for="mascota.Peso" class="form-control" placeholder="Ingrese Peso"/>
+    </div>
+     <div class="form-group">
+        <label asp-for="mascota.FrecuenciaRespiratoria"></label>
+        <input id="Frecuencia_Respiratoria" type="text" asp-for="mascota.FrecuenciaRespiratoria" class="form-control" placeholder="Ingrese Frecuencia Respiratoria"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="mascota.FrecuenciaCardiaca"></label>
+        <input id="Frecuencia_Cardiaca" type="text" asp-for="mascota.FrecuenciaCardiaca" class="form-control" placeholder="Ingrese Frecuencia Cardiaca"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="mascota.EstadoAnimo"></label>
+        <input id="Estado_Animo" type="text" asp-for="mascota.EstadoAnimo" class="form-control" placeholder="Ingrese Estado de Animo"/>
+    </div>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary" onclick="Actualizado()">Guardar Cambios</button>
+        
+       
+    </div>
+</form>
+<button id="Cancelar" onclick="LimpiarForm();" type="submit"  class="btn btn-danger">Cancelar</button>
+<a asp-page="./ListaMascotas" class="btn btn-primary">Regresar</a>
+<script>
+
+        function LimpiarForm(){
+
+            $("#Nombre").val('');
+            $("#Color_Ojos").val('');
+            $("#Color_Piel").val('');
+            $("#Temperatura").val('');
+            $("#Peso").val('');
+            $("#Frecuencia_Respiratoria").val('');
+            $("#Frecuencia_Cardiaca").val('');
+            $("#Estado_Animo").val('');
+        }
+
+        function Actualizado(){
+
+            confirm("Registro Actualizado,con exito");
+        }
+
+</script>
